{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 298,
  "lineage": "d58d5d0d-70a8-bb4d-9deb-75be7e07adcd",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2b8ca1dad447f8a",
            "arn": "arn:aws:ec2:us-east-1:350102312519:instance/i-0daf502d0292be889",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0daf502d0292be889",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-1-KP",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08aefc47dad665b3d",
            "private_dns": "ip-10-0-150-148.ec2.internal",
            "private_ip": "10.0.150.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c5eca4cbba4fa459",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e785b4a6a2af793",
            "tags": {
              "Name": "eb-control-vm"
            },
            "tags_all": {
              "Name": "eb-control-vm"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09b0d6b9d572db122"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.test-sg",
            "module.vpc.aws_subnet.control_vm",
            "module.vpc.aws_vpc.eb-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:security-group/sg-09b0d6b9d572db122",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b0d6b9d572db122",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from Anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "test-sg",
            "name_prefix": "",
            "owner_id": "350102312519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-sg"
            },
            "tags_all": {
              "Name": "test-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-055d1836239daaffc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.eb-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-gateway-elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02db493bd6ce60151",
            "domain": "vpc",
            "id": "eipalloc-02db493bd6ce60151",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-199-80-58.compute-1.amazonaws.com",
            "public_ip": "44.199.80.58",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eb-eip"
            },
            "tags_all": {
              "Name": "eb-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eb-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:internet-gateway/igw-0cb1a8f8fb8994b26",
            "id": "igw-0cb1a8f8fb8994b26",
            "owner_id": "350102312519",
            "tags": {
              "Name": "eb-igw"
            },
            "tags_all": {
              "Name": "eb-igw"
            },
            "vpc_id": "vpc-055d1836239daaffc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eb-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eb-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02db493bd6ce60151",
            "connectivity_type": "public",
            "id": "nat-081081d42b93a9f91",
            "network_interface_id": "eni-061496addc952226e",
            "private_ip": "10.0.158.43",
            "public_ip": "44.199.80.58",
            "subnet_id": "subnet-08e3d154cf60ba26c",
            "tags": {
              "Name": "eb-nat-gateway"
            },
            "tags_all": {
              "Name": "eb-nat-gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat-gateway-elastic-ip",
            "module.vpc.aws_internet_gateway.eb-igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eb-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eb-nat-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:route-table/rtb-0887c0de2c5f1bf3e",
            "id": "rtb-0887c0de2c5f1bf3e",
            "owner_id": "350102312519",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-081081d42b93a9f91",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eb-nat-route-table"
            },
            "tags_all": {
              "Name": "eb-nat-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-055d1836239daaffc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat-gateway-elastic-ip",
            "module.vpc.aws_internet_gateway.eb-igw",
            "module.vpc.aws_nat_gateway.eb-nat-gateway",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eb-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eb-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:route-table/rtb-0aeda1d7f33e7d8e0",
            "id": "rtb-0aeda1d7f33e7d8e0",
            "owner_id": "350102312519",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cb1a8f8fb8994b26",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eb-public-route-table"
            },
            "tags_all": {
              "Name": "eb-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-055d1836239daaffc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.eb-igw",
            "module.vpc.aws_vpc.eb-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8374d70ecd34367",
            "route_table_id": "rtb-0887c0de2c5f1bf3e",
            "subnet_id": "subnet-05e785b4a6a2af793"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat-gateway-elastic-ip",
            "module.vpc.aws_internet_gateway.eb-igw",
            "module.vpc.aws_nat_gateway.eb-nat-gateway",
            "module.vpc.aws_route_table.eb-nat-route-table",
            "module.vpc.aws_subnet.control_vm",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eb-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de6fe47c927b6d69",
            "route_table_id": "rtb-0aeda1d7f33e7d8e0",
            "subnet_id": "subnet-08e3d154cf60ba26c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.eb-igw",
            "module.vpc.aws_route_table.eb-public-route-table",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eb-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "control_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:subnet/subnet-05e785b4a6a2af793",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.150.0/24",
            "id": "subnet-05e785b4a6a2af793",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "350102312519",
            "tags": {
              "Name": "eb-subnet-private-controlvm-a"
            },
            "tags_all": {
              "Name": "eb-subnet-private-controlvm-a"
            },
            "vpc_id": "vpc-055d1836239daaffc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eb-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:subnet/subnet-03989a65d860deb67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.154.0/24",
            "id": "subnet-03989a65d860deb67",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "350102312519",
            "tags": {
              "Name": "eb-subnet-private-dab-a"
            },
            "tags_all": {
              "Name": "eb-subnet-private-dab-a"
            },
            "vpc_id": "vpc-055d1836239daaffc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eb-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:subnet/subnet-0821cfaf950073211",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.155.0/24",
            "id": "subnet-0821cfaf950073211",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "350102312519",
            "tags": {
              "Name": "eb-subnet-private-eks-a"
            },
            "tags_all": {
              "Name": "eb-subnet-private-eks-a"
            },
            "vpc_id": "vpc-055d1836239daaffc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eb-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:subnet/subnet-09b88a8a685387e60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.156.0/24",
            "id": "subnet-09b88a8a685387e60",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "350102312519",
            "tags": {
              "Name": "eb-subnet-private-eks-b"
            },
            "tags_all": {
              "Name": "eb-subnet-private-eks-b"
            },
            "vpc_id": "vpc-055d1836239daaffc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eb-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "forgerock_rms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:subnet/subnet-0fddd3e378bef71a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0fddd3e378bef71a3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "350102312519",
            "tags": {
              "Name": "eb-subnet-private-forgerock-rms"
            },
            "tags_all": {
              "Name": "eb-subnet-private-forgerock-rms"
            },
            "vpc_id": "vpc-055d1836239daaffc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eb-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "oam",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:subnet/subnet-00a36eb3b463a09af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.153.0/24",
            "id": "subnet-00a36eb3b463a09af",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "350102312519",
            "tags": {
              "Name": "eb-subnet-private-oam-a"
            },
            "tags_all": {
              "Name": "eb-subnet-private-oam-a"
            },
            "vpc_id": "vpc-055d1836239daaffc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eb-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "online",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:subnet/subnet-04ef337a8293a21d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.151.0/24",
            "id": "subnet-04ef337a8293a21d5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "350102312519",
            "tags": {
              "Name": "eb-subnet-private-online-a"
            },
            "tags_all": {
              "Name": "eb-subnet-private-online-a"
            },
            "vpc_id": "vpc-055d1836239daaffc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eb-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:subnet/subnet-08e3d154cf60ba26c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.158.0/24",
            "id": "subnet-08e3d154cf60ba26c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "350102312519",
            "tags": {
              "Name": "eb-subnet-public"
            },
            "tags_all": {
              "Name": "eb-subnet-public"
            },
            "vpc_id": "vpc-055d1836239daaffc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eb-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "trf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:subnet/subnet-0d90d9587a6617d15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.152.0/24",
            "id": "subnet-0d90d9587a6617d15",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "350102312519",
            "tags": {
              "Name": "eb-subnet-private-trf-a"
            },
            "tags_all": {
              "Name": "eb-subnet-private-trf-a"
            },
            "vpc_id": "vpc-055d1836239daaffc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eb-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:subnet/subnet-0b711f9c247d0b4c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b711f9c247d0b4c0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "350102312519",
            "tags": {
              "Name": "eb-subnet-private-vpn"
            },
            "tags_all": {
              "Name": "eb-subnet-private-vpn"
            },
            "vpc_id": "vpc-055d1836239daaffc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eb-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eb-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:vpc/vpc-055d1836239daaffc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03552ca8508409477",
            "default_route_table_id": "rtb-0f1baefd76d70624c",
            "default_security_group_id": "sg-01e057ca1ce425c59",
            "dhcp_options_id": "dopt-7ebe8d04",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-055d1836239daaffc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f1baefd76d70624c",
            "owner_id": "350102312519",
            "tags": {
              "Name": "eb-vpc"
            },
            "tags_all": {
              "Name": "eb-vpc"
            }
          }
        }
      ]
    }
  ]
}